// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="page page-limited"
>
  <div
    className="page-with-sidebar"
  >
    <div
      className="page-main"
    >
      <div>
        <div
          className="portfolio-boxes"
        >
          <ReleasabilityBox
            component="foo"
            measures={
              Object {
                "ncloc": "173",
                "reliability_rating": "1",
              }
            }
          />
          <ReliabilityBox
            component="foo"
            measures={
              Object {
                "ncloc": "173",
                "reliability_rating": "1",
              }
            }
          />
          <SecurityBox
            component="foo"
            measures={
              Object {
                "ncloc": "173",
                "reliability_rating": "1",
              }
            }
          />
          <MaintainabilityBox
            component="foo"
            measures={
              Object {
                "ncloc": "173",
                "reliability_rating": "1",
              }
            }
          />
        </div>
        <WorstProjects
          component="foo"
          subComponents={Array []}
          total={0}
        />
      </div>
    </div>
    <aside
      className="page-sidebar-fixed"
    >
      <div
        className="portfolio-meta-card"
      >
        <h4
          className="portfolio-meta-header"
        >
          overview.about_this_portfolio
        </h4>
        <Summary
          component={
            Object {
              "key": "foo",
              "name": "Foo",
              "qualifier": "TRK",
            }
          }
          measures={
            Object {
              "ncloc": "173",
              "reliability_rating": "1",
            }
          }
        />
      </div>
      <div
        className="portfolio-meta-card"
      >
        <Activity
          component="foo"
          metrics={Object {}}
        />
      </div>
      <div
        className="portfolio-meta-card"
      >
        <Report
          component={
            Object {
              "key": "foo",
              "name": "Foo",
              "qualifier": "TRK",
            }
          }
        />
      </div>
    </aside>
  </div>
</div>
`;

exports[`renders when portfolio is empty 1`] = `
<div
  className="page page-limited"
>
  <div
    className="page-with-sidebar"
  >
    <div
      className="page-main"
    >
      <div
        className="empty-search"
      >
        <h3>
          portfolio.empty
        </h3>
      </div>
    </div>
    <aside
      className="page-sidebar-fixed"
    >
      <div
        className="portfolio-meta-card"
      >
        <h4
          className="portfolio-meta-header"
        >
          overview.about_this_portfolio
        </h4>
        <Summary
          component={
            Object {
              "key": "foo",
              "name": "Foo",
              "qualifier": "TRK",
            }
          }
          measures={
            Object {
              "reliability_rating": "1",
            }
          }
        />
      </div>
      <div
        className="portfolio-meta-card"
      >
        <Activity
          component="foo"
          metrics={Object {}}
        />
      </div>
      <div
        className="portfolio-meta-card"
      >
        <Report
          component={
            Object {
              "key": "foo",
              "name": "Foo",
              "qualifier": "TRK",
            }
          }
        />
      </div>
    </aside>
  </div>
</div>
`;

exports[`renders when portfolio is not computed 1`] = `
<div
  className="page page-limited"
>
  <div
    className="page-with-sidebar"
  >
    <div
      className="page-main"
    >
      <div
        className="empty-search"
      >
        <h3>
          portfolio.not_computed
        </h3>
      </div>
    </div>
    <aside
      className="page-sidebar-fixed"
    >
      <div
        className="portfolio-meta-card"
      >
        <h4
          className="portfolio-meta-header"
        >
          overview.about_this_portfolio
        </h4>
        <Summary
          component={
            Object {
              "key": "foo",
              "name": "Foo",
              "qualifier": "TRK",
            }
          }
          measures={
            Object {
              "ncloc": "173",
            }
          }
        />
      </div>
      <div
        className="portfolio-meta-card"
      >
        <Activity
          component="foo"
          metrics={Object {}}
        />
      </div>
      <div
        className="portfolio-meta-card"
      >
        <Report
          component={
            Object {
              "key": "foo",
              "name": "Foo",
              "qualifier": "TRK",
            }
          }
        />
      </div>
    </aside>
  </div>
</div>
`;
